# learning-blocks

./: .gitignore  CNAME  Current_Grades.py  GPA.py  README.md  Readme.md  Student_Demographics(missingiep,504,F&Rlunch,Homeless, exit reason).py  Trancripts Output.py  alma.py  exit reason.py  exit_reason.py  iep,504,F&Rlunch,Homeless.py  index.html  meta.yml  package-lock.json  package.json  requirements.txt
CSV_FILES/: enrollment.csv
Documentation Directory/: Cavas_api_documentation.md  Database_documentation.md  Docker_version_documentation.md  FastAPI_setup.md  Individual_scripts.md  No_docker_getting_started.md  Postman_documentation.md  Problem_Statement.md  ReadMe.md  Readme.md  Running_with_VSCode.md  SSSP_Read_Me.md  Stand_Alone_FastAPI_Setup.md  Stand_alone_FastAPI_setup.md  Utils.md  Vuejs_routing_documentation.md  Vuejs_setup.md
Individual Python Scripts/: ALMA_SIS_Demo(shwndea)  API_Class_of_requsts( dguti97576).py  IEP_script  Transcript_Module_Part1_(shwndea).py  Transcript_Module_Part2_(shwndea).py  class_API#2_current_grades( dguti97576).py  exit_reason_pt_2_script(shwndea).py  t.txt
LB_Community_Edition_Enterprise/: Readme.md
LB_Community_Edition_Non_Enterprise/: LICENSE  ReadMe.md  Read_Me.md  Readme.md
LB_Community_Edition_Non_Enterprise/Pilot_Iteration_Files/GCC_Iteration_FastAPI/V1.0/: docker-compose.yml  dockerfile  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
LB_Community_Edition_Non_Enterprise/Pilot_Iteration_Files/GCC_Iteration_FastAPI/V1.0/alembic/: env.py
LB_Community_Edition_Non_Enterprise/Pilot_Iteration_Files/GCC_Iteration_FastAPI/V1.0/alembic/versions/: 17d0e3ea6f78_initialize_db.py  2c437fd936a7_initialize_db.py  30786eefc60a_update_model_peopleindb_grades_.py  b09c7c821fff_update_model_peopleindb_grades_.py  dd1c9f95681b_update_model_peopleindb_grades_.py  migrate.sh
LB_Community_Edition_Non_Enterprise/Pilot_Iteration_Files/GCC_Iteration_FastAPI/V1.0/celery/: celery_app.py
LB_Community_Edition_Non_Enterprise/Pilot_Iteration_Files/GCC_Iteration_FastAPI/V1.0/databases/: databases.py
LB_Community_Edition_Non_Enterprise/Pilot_Iteration_Files/GCC_Iteration_FastAPI/V1.0/models/: __init__.py  models.py
LB_Community_Edition_Non_Enterprise/Pilot_Iteration_Files/GCC_Iteration_FastAPI/V1.0/routers/: people.py  schools.py  students.py  teachers.py
LB_Community_Edition_Non_Enterprise/Pilot_Iteration_Files/GCC_Iteration_FastAPI/V1.0/schemas/: schemas.py
LB_Community_Edition_Non_Enterprise/Pilot_Iteration_Files/GCC_Iteration_FastAPI/V1.0/tasks/: tasks.py
Learning-Blocks-Docker-Version/: Readme.md  docker-compose.yml
Learning-Blocks-No-Docker-Version/: Readme.md
Learning-Blocks-No-Docker-Version/py_orl/: Makefile  Readme.md  alembic.ini  all.http  app.py  backend_pre_start.py  config_local.py  initial_data.py  models.py  neworgsmodel.py  prestart.sh  pyproject.toml  requirements.txt  tests-start.sh
Learning-Blocks-No-Docker-Version/py_orl/api/: deps.py
Learning-Blocks-No-Docker-Version/py_orl/api/api_v1/: api.py
Learning-Blocks-No-Docker-Version/py_orl/api/api_v1/endpoints/: current_grades.py  orgs.py  other.py  students_status.py
Learning-Blocks-No-Docker-Version/py_orl/core/: config.py
Learning-Blocks-No-Docker-Version/py_orl/crud/: __init__.py  base.py  crud_academicsession.py  crud_academicsessions.py  crud_org.py  crud_orgs.py
Learning-Blocks-No-Docker-Version/py_orl/db/: base.py  engine.py  init_db.py  session.py
Learning-Blocks-No-Docker-Version/py_orl/migrations/: env.py
Learning-Blocks-No-Docker-Version/py_orl/migrations/versions/: 40cd3140ef0c_create_orgs_and_academicsessions_tables.py  6f11197b911d_initial_tables.py  7676b7dc4cb0_create_org_table.py  84ac5581e001_initial_tables.py  e58158fe1665_create_org_table.py
Learning-Blocks-No-Docker-Version/py_orl/models/: academic_session.py  academicsessions.py  category.py  class.py  class_resource.py  course.py  course_resource.py  demographic.py  enrollment.py  gender.py  line_item.py  org.py  orgs.py  resource.py  result.py  user.py
Learning-Blocks-No-Docker-Version/py_orl/schemas/: __init__.py  academicsession.py  academicsessions.py  category_schema.py  class_model_schema.py  enrollment_schema.py  org.py  orgs.py  user_schema.py
Learning-Blocks-No-Docker-Version/py_orl/scripts/: Makefile  Readme.md  test.sh  tests_pre_start.py
Learning-Blocks-No-Docker-Version/py_orl/tests/: Makefile  Readme.md  conftest.py
Learning-Blocks-No-Docker-Version/py_orl/tests/api/api_v1/: test_orgs.py  test_students.py
Learning-Blocks-No-Docker-Version/py_orl/tests/crud/: test_org.py  test_student.py
Learning-Blocks-No-Docker-Version/py_orl/tests/utils/: org.py  student.py  utils.py
Py_orl/: Makefile  Readme.md  alembic.ini  app.py  initial_data.py
Stand Alone Python Scripts/: Transcript_Module_Part2_(shwndea).py  template_api_requests(shwndea).py
Stand_ Alone_ Python_ Scripts/: API_Class( dguti97576).py  CanvasAPI.py  GPA_script _(shwndea).py  IEP_script(shwndea)  Readme.md  Transcript_Module_Part1_(shwndea).py  Transcript_Module_Part2_(shwndea).py  absent_present_tardy_tracking_module(shwndea).py  exit_reason_pt_1_script(shwndea).py  exit_reason_pt_2_script(shwndea).py  request access token to Aeries demo database.py  student_demographics_exit_reason_script(shwndea).py  student_status_histogram.py  template_api_requests(shwndea).py  transcripts_output_pt1_script.py
Stand_Alone_FastAPI/: ReadMe.md  Readme.md
assets/: AboutView--i2NDtgI.css  AboutView-YACKk4hQ.js  AboutView-_cpdy50C.js  GraphView-DZoHwrAd.js  GraphView-_OXAZX57.css  GraphView-kOsvm6g4.js  StudentRecordView-X-rPu9AC.js  StudentRecordView-cwq_SRsK.js  StudentRecordView-ezwUokTB.css  index--7WLXYUd.css  (+7 more)
(+912 files in other folders)
