[tool.poetry]
name = "v1-0"
version = "0.1.0"
description = "LB_DB"
authors = ["Shawn_Dean <info@innovateforcalifornia.org>"]
license = "MIT LicenseCopyright (c) 2022 Code for Sacramento & 2024 Innovate For California <https://github.com/code4sac/learning-blocks?tab=MIT-1-ov-file#readme>"
readme = "README.md"
packages = [{include = "v1"}]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.2"
annotated-types = "0.7.0"
anyio = "4.4.0"
click = "8.1.7"
colorama = "0.4.6"
fastapi = "0.112.0"
fastapi-sqlalchemy = "0.2.1"
greenlet = "3.0.3"
h11 = "0.14.0"
idna = "3.7"
mako = "1.3.5"
markupsafe = "2.1.5"
psycopg2 = "2.9.9"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
python-dotenv = "1.0.1"
sniffio = "1.3.1"
sqlalchemy = "2.0.32"
starlette = "0.37.2"
typing-extensions = "4.12.2"
uvicorn = "0.30.5"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
